--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
 </head>
 <body>
 
-    <div class="welcome">
-        <h1 class="welcome-text">Welcome to Rock, Paper, Scissors</h1>
-        <img class="welcome-image" src="./img/home.png" alt="Rock, Paper, Scissors Image">
-        <p class="welcome-button">Start Game</p>
-    </div>
+    <header>
+        <div class="welcome">
+            <h1 class="welcome-text">Welcome to Rock, Paper, Scissors</h1>
+            <img class="welcome-image" src="./img/home.png" alt="Rock, Paper, Scissors Image">
+            <p class="welcome-button">Start Game</p>
+        </div>
+    </header>
 
-    <div class="game-wrapper">
-        <p class="game-one">Rock Paper Scissors</p>
-        <p class="game-two">Please choose either Rock, Paper or Scissors</p>
-        <div class="game-selctions">
-            <img id="game-icon" class="paper" src="./img/paper.png" alt="paper icon">
-            <img id="game-icon" class="rock" src="./img/rock.png" alt="rock icon">
-            <img id="game-icon" class="scissors" src="./img/scissors.png" alt="scissors icon">
+    <main>
+        <div class="game-wrapper">
+            <p class="game-one">Rock Paper Scissors Game</p>
+            <p class="game-two">Please choose either Rock, Paper or Scissors</p>
+            <div class="game-selctions">
+                <img id="game-icon" title="rock" class="rock" src="./img/rock.png" alt="rock icon">
+                <img id="game-icon" title="paper" class="paper" src="./img/paper.png" alt="paper icon">
+                <img id="game-icon" title="scissors" class="scissors" src="./img/scissors.png" alt="scissors icon">
+            </div>
+            <p class="game-round">Select choice</p>
+            <div class="scoreboard">
+                <span class="board-one">Player - </span> <span class="player-score">0</span> : <span class="computer-score">0</span> <span class="board-two">- Computer</span>
+            </div>
+            <p class="game-winner">No winners yet - First to reach 5 wins</p>
+            <button class="game-button">Restart Game</button>
         </div>
-        <p class="game-round">Select choice</p>
-        <div class="scoreboard">
-            <span class="board-one">Player - </span> <span class="player-score">0</span> : <span class="computer-score">0</span> <span class="board-two">- Computer</span>
-        </div>
-        <p class="game-winner">No winners yet - First to reach 5 wins</p>
-        <button class="game-button">Restart Game</button>
-    </div>
+    </main>
     
 </body>
 </html>
